<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg_sheet_round"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/optionDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_post"
        android:padding="14dp"
        android:textSize="16sp"
        android:textColor="@color/red"
        android:visibility="gone" />

    <TextView
        android:id="@+id/optionHide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hide_post"
        android:padding="14dp"
        android:textSize="16sp"
        android:textColor="@color/feed_primary_text" />

    <TextView
        android:id="@+id/optionDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_media"
        android:padding="14dp"
        android:textSize="16sp"
        android:textColor="@color/feed_primary_text" />

    <TextView
        android:id="@+id/optionFlag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_flag_post"
        android:padding="14dp"
        android:textSize="16sp"
        android:textColor="@color/feed_primary_text" />
</LinearLayout>
